hphp/hack/test/typecheck/reactive/vararg_mutable1.php.exp
File "vararg_mutable1.php", line 7, characters 12-32:
Attributes on variadic parameters are not allowed (Parsing[1002])
