hphp/hack/test/typecheck/reactive/vararg_mutable1.php
<?hh
<<file: __EnableUnstableFeatures('coeffects_provisional')>>

class A {}

<<__Rx>>
function f(<<__Mutable>> A ...$a): void {
}
